--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,9 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
+<h2>My First Heading</h2>
+<h3>My First Heading</h3>
+<h4>My First Heading</h4>
 
 </body>
 </html>
