added the new 5,6

--- a/demo.html
+++ b/demo.html
@@ -7,6 +7,8 @@
 <h2>My First Heading</h2>
 <h3>My First Heading</h3>
 <h4>My First Heading</h4>
+<h5>My First Heading</h5>
+<h6>My First Heading</h6>
 
 </body>
 </html>
