--- a/demo.html
+++ b/demo.html
@@ -9,6 +9,9 @@
 <h4>My First Heading</h4>
 <h5>My First Heading</h5>
 <h6>My First Heading</h6>
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+<h2>My First Heading</h2>
 
 </body>
 </html>
